ombi/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  labels:
    app.kubernetes.io/name: ombi
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ombi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ombi
    spec:
      containers:
      - name: ombi
        image: ghcr.io/linuxserver/ombi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3579
          name: http
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 60
        readinessProbe:
          tcpSocket:
            port: http
        resources:
          limits:
            cpu: 1000Mi
            memory: 300Mi
          requests:
            memory: 200Mi
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: ombi-config
