ombi/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  labels:
    app.kubernetes.io/name: ombi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: db3000.xmple.io
    http:
      paths:
      - path: /ombi
        pathType: Prefix
        backend:
          service:
            name: ombi
            port:
              name: http
  tls:
  - hosts:
    - db3000.xmple.io
    secretName: ombi-tls
